Review Request 6959 see PLS-2467, PLS-2470, PLS-2477 - fixed search button overlapping with categories list on enrichments - save button now is active between pages if there are enrichments for enabling - set min width for field mapping on create model page

--- a/le-ui/projects/leadprioritization/app/create/CreateStyles.scss
+++ b/le-ui/projects/leadprioritization/app/create/CreateStyles.scss
@@ -365,6 +365,11 @@ section.container.custom-fields {
         font-size: 1.2em;
         padding: 0.5em;
     }
+    form[name="fieldMappingForm"] {
+        .columns {
+            min-width: 672px;
+        }
+    }
 }
 
 
