--- a/le-ui/projects/leadprioritization/app/enrichment/views/EnrichmentView.scss
+++ b/le-ui/projects/leadprioritization/app/enrichment/views/EnrichmentView.scss
@@ -111,7 +111,7 @@
                         background: white;
                         position: absolute;
                         left: 0;
-                        z-index: 1;
+                        z-index: 30;
                         &.active {
                             display: block;
                         }
